# roxmotor

./: DVR-HAL.drawio  README.md  README02.md
8155-QMcuScreen/: .README.md  README.md  screen_mcu_hangsheng.c
8155-QMcuScreen/screen_firmware_update/: Makefile  common.mk
8155-QMcuScreen/screen_firmware_update/src/: common_mcu_update.c  common_mcu_update.h  logutils.h  screen_firmware_update,c  screen_firmware_update.h  yftech_mcu_update.c  yftech_mcu_update.h
8155-QMcuScreen/screen_mcu_service/: common.mk
8155-QMcuScreen/screen_mcu_service/src/: SCREEN_MCU_ZHEYI_H.h  SCREEN_MCU_chery_H.h  screen_mcu_chery.c  screen_mcu_cms022.c  screen_mcu_cms022.h  screen_mcu_haiwei.c  screen_mcu_haiwei.h  screen_mcu_hangsheng.h  screen_mcu_huayang.c  screen_mcu_huayang.h  screen_mcu_oufei.c  screen_mcu_oufei.h  screen_mcu_service.c  screen_mcu_service.h  screen_mcu_tp.h  screen_mcu_yfmotor.c  screen_mcu_yfmotor.h  screen_mcu_yftech.c  screen_mcu_yftech.h  screen_mcu_zheyi.c
QDoipServer/doipService/: CommunicationCtrl.cpp  CommunicationCtrl.h  DIDInfosHandle.cpp  DIDInfosHandle.h
QScreenService/: CMakeLists.txt  CMakeLists.txt.1217  README.md  主机与仪表&中控屏通讯I2C协议.xlsx
QScreenService/inc/: BinFileDecode.h  BinFileHeader.h.0112  CRC16XMODEM.h  CommandProcessor.h.old  Config.h  DataReader.h.old  I2cProcessHandler.h  Logger.h  QFile.h  SafeQueue.h  ScreenDeviceController.h  ScreenDeviceManager.h.old  UpgradeProcess.h
QScreenService/inc/core/: CmdExecutor.h  CommandDispatcher.h  ScreenCommand.h  ScreenDevPoller.h  UpgradeCmdExecutor.h
QScreenService/inc/screenReader/: CeilingScreenReader.h.old  ClusterScreenReader.h.old  IVIScreenReader.h.old  ScreenReader.h
QScreenService/inc/utils/: StringUtil.h
QScreenService/src/: BinFileDecode.cpp  CMakeLists.txt  CommandProcessor.cpp  Logger.cpp  QFile.cpp  ScreenDeviceController.cpp  ScreenDeviceManager.cpp  UpgradeProcess.cpp  UpgradeProcess.cpp.old  UpgradeProcess_backup.cpp.old  main.cpp  main.cpp.1223  main.cpp.old
QScreenService/src/core/: CmdExecutor.cpp  CommandDispatcher.cpp  ScreenCommand.cpp  ScreenDevPoller.cpp  UpgradeCmdExecutor.cpp
QScreenService/src/screenReader/: CeilingScreenReader.cpp  ClusterScreenReader.cpp.old  IVIScreenReader.cpp.old
binFileParse/: main.c  main.cpp
commService/: CMakeLists.txt  ServiceManager.cpp  ServiceManager.h
