cmake_minimum_required(VERSION 3.10)
MESSAGE(STATUS "CMAKE_VERSION:${CMAKE_VERSION}")

set(TARGET_OS "QNX")
#set(TARGET_ON_BOARD ON CACHE BOOL "Run on target board (ARM)")
set(TARGET_ON_BOARD ON CACHE BOOL "Run on target board (ARM)" )

IF ("$ENV{QNX_HOST}" STREQUAL "")
    MESSAGE(FATAL_ERROR "QNX_HOST environment variable is not set")
ENDIF()

IF ("$ENV{QNX_TARGET}" STREQUAL "")
    MESSAGE(FATAL_ERROR "QNX_TARGET environment variable is not set")
ENDIF()

IF ("$ENV{QNX_SYSROOT}" STREQUAL "")
    MESSAGE(STATUS "QNX_SYSROOT environment variable is not set")
ENDIF()

OPTION(TARGET_ON_BOARD "determine where to run(TARGET_BOARD or QNX_x86)" ON)
IF (${TARGET_ON_BOARD})
    MESSAGE(STATUS "TARGET_ON_BOARD IS ON, run on the target board")
    SET(ARCH gcc_ntoaarch64le)
    SET(QCC_NTOARCH aarch64le)
ELSE()
    MESSAGE(STATUS "TARGET_ON_BOARD IS OFF, run on the QNX-x86 system")
    SET(ARCH gcc_ntox86_64)
    SET(QCC_NTOARCH x86_64)
ENDIF()

SET(QNX_HOST "$ENV{QNX_HOST}")
SET(QNX_TARGET "$ENV{QNX_TARGET}")
#SET(QNX_SYSROOT "$ENV{QNX_SYSROOT}")
SET(QNX_SYSROOT "$ENV{QNX_TARGET}")

MESSAGE(STATUS "QNX_HOST:${QNX_HOST}")
MESSAGE(STATUS "QNX_TARGET:${QNX_TARGET}")
MESSAGE(STATUS "ARCH:${ARCH}")
MESSAGE(STATUS "QCC_NTOARCH:${QCC_NTOARCH}")
MESSAGE(STATUS "QNX_SYSROOT:${QNX_SYSROOT}")

IF ("$ENV{BUILD_PRODUCT_IMAGE_TYPE}" STREQUAL "A")
	ADD_DEFINITIONS(-DIMAGE_TYPE_A)
ELSEIF ("$ENV{BUILD_PRODUCT_IMAGE_TYPE}" STREQUAL "B")
	ADD_DEFINITIONS(-DIMAGE_TYPE_B)
ELSE()
	ADD_DEFINITIONS(-DIMAGE_TYPE_A)
ENDIF()
MESSAGE(STATUS "BUILD_PRODUCT_IMAGE_TYPE:$ENV{BUILD_PRODUCT_IMAGE_TYPE}")

SET(CMAKE_C_COMPILER "${QNX_HOST}/usr/bin/qcc")
SET(CMAKE_C_COMPILER_TARGET "${ARCH}")
SET(CMAKE_CXX_COMPILER ${QNX_HOST}/usr/bin/q++)
SET(CMAKE_CXX_COMPILER_TARGET "${ARCH}")
SET(CMAKE_LINKER "${QNX_HOST}/usr/bin/nto${QCC_NTOARCH}-ld" CACHE PATH "QNX linker program" FORCE)
SET(CMAKE_C_FLAGS "$ENV{CMAKE_C_FLAGS} -V${ARCH} -Wall -g -fPIC -ggdb -O0")
SET(CMAKE_CXX_FLAGS "$ENV{CMAKE_CXX_FLAGS} -V${ARCH} -Wall -g -std=c++17 -fPIC -D_GLIBCXX_USE_CXX17_ABI=0 -U__STRICT_ANSI__ -lang-c++ -ggdb -O0")

MESSAGE(STATUS "CMAKE_C_COMPILER ${CMAKE_C_COMPILER}")
MESSAGE(STATUS "CMAKE_CXX_COMPILER ${CMAKE_CXX_COMPILER}")
MESSAGE(STATUS "CMAKE_LINKER ${CMAKE_LINKER}")
MESSAGE(STATUS "CMAKE_C_FLAGS:${CMAKE_C_FLAGS}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS:${CMAKE_CXX_FLAGS}")

project(screenService LANGUAGES CXX)
#set(CMAKE_CXX_STANDARD 17)



set(SOURCES
    src/main.cpp
    src/ScreenDeviceController.cpp
    src/core/CmdExecutor.cpp
    src/core/CommandDispatcher.cpp
    src/core/ScreenCommand.cpp
    src/core/ScreenDevPoller.cpp
)

# define target binary
add_executable(${PROJECT_NAME} ${SOURCES})
# add include headers
target_include_directories(${PROJECT_NAME}
PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/inc
)
# target_link_directories(${PROJECT_NAME}
# PRIVATE
#     ${QNX_SYSROOT}/aarch64le/lib
#     ${QNX_SYSROOT}/aarch64le/usr/lib
# )
# add link libs
target_link_libraries(${PROJECT_NAME}
PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/libi2c_handler.a
    ${CMAKE_CURRENT_SOURCE_DIR}/lib/libi2c_system_calls.a
)
#install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/out/usr/bin/)
